--- a/bienesraices_inicio/anuncios.html
+++ b/bienesraices_inicio/anuncios.html
@@ -12,7 +12,7 @@
       <div class="contenedor contenido-header">
         <div class="barra">
           <a href="/">
-            <img src="build/img/logo.svg" alt="logo">
+            <img src="build/img/logo.svg" alt="logo" />
           </a>
           <div class="derecha">
             <nav class="navegacion">
@@ -26,19 +26,271 @@
       </div>
     </header>
     <main class="contenedor seccion">
-        <h1>Anuncios</h1>
+      <h1>Casas y Depas en Venta</h1>
+      <div class="contenedor-anuncios">
+        <div class="anuncio">
+          <picture>
+            <source srcset="build/img/anuncio1.webp" type="image/webp" />
+            <source srcset="build/img/anuncio1.jpg" type="image/jpg" />
+            <img src="build/img/anuncio1.jpg" alt="anuncio" loading="lazy" />
+          </picture>
+          <div class="contenido-anuncio">
+            <h3>Casa de Lujo en el Lago</h3>
+            <p>
+              Casa en el lago con excelente vista, acabados de lujo a un
+              excelente precio
+            </p>
+            <p class="precio">$3,0000,000</p>
+
+            <ul class="iconos-caracteristicas">
+              <li>
+                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_estacionamiento.svg"
+                  alt="icono estacionamiento"
+                />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_dormitorio.svg"
+                  alt="icono dormitorio"
+                />
+                <p>4</p>
+              </li>
+            </ul>
+            <a class="boton-amarillo-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
+          </div>
+          <!--contenido-anuncio-->
+        </div>
+        <!--anuncio-->
+
+        <div class="anuncio">
+          <picture>
+            <source srcset="build/img/anuncio2.webp" type="image/webp" />
+            <source srcset="build/img/anuncio2.jpg" type="image/jpg" />
+            <img src="build/img/anuncio2.jpg" alt="anuncio" loading="lazy" />
+          </picture>
+          <div class="contenido-anuncio">
+            <h3>Casa terminados de lujo</h3>
+            <p>
+              Casa en el lago con excelente vista, acabados de lujo a un
+              excelente precio
+            </p>
+            <p class="precio">$3,0000,000</p>
+
+            <ul class="iconos-caracteristicas">
+              <li>
+                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_estacionamiento.svg"
+                  alt="icono estacionamiento"
+                />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_dormitorio.svg"
+                  alt="icono dormitorio"
+                />
+                <p>4</p>
+              </li>
+            </ul>
+            <a class="boton-amarillo-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
+          </div>
+          <!--contenido-anuncio-->
+        </div>
+
+        <!--anuncio-->
+        <div class="anuncio">
+          <picture>
+            <source srcset="build/img/anuncio3.webp" type="image/webp" />
+            <source srcset="build/img/anuncio3.jpg" type="image/jpg" />
+            <img src="build/img/anuncio3.jpg" alt="anuncio" loading="lazy" />
+          </picture>
+          <div class="contenido-anuncio">
+            <h3>Casa con alberca</h3>
+            <p>
+              Casa en el lago con excelente vista, acabados de lujo a un
+              excelente precio
+            </p>
+            <p class="precio">$3,0000,000</p>
+
+            <ul class="iconos-caracteristicas">
+              <li>
+                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_estacionamiento.svg"
+                  alt="icono estacionamiento"
+                />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_dormitorio.svg"
+                  alt="icono dormitorio"
+                />
+                <p>4</p>
+              </li>
+            </ul>
+            <a class="boton-amarillo-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
+          </div>
+          <!--contenido-anuncio-->
+        </div>
+        <!--anuncio-->
+        <div class="anuncio">
+          <picture>
+            <source srcset="build/img/anuncio4.webp" type="image/webp" />
+            <source srcset="build/img/anuncio4.jpg" type="image/jpg" />
+            <img src="build/img/anuncio4.jpg" alt="anuncio" loading="lazy" />
+          </picture>
+          <div class="contenido-anuncio">
+            <h3>Casa de Lujo en el Lago</h3>
+            <p>
+              Casa en el lago con excelente vista, acabados de lujo a un
+              excelente precio
+            </p>
+            <p class="precio">$3,0000,000</p>
+
+            <ul class="iconos-caracteristicas">
+              <li>
+                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_estacionamiento.svg"
+                  alt="icono estacionamiento"
+                />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_dormitorio.svg"
+                  alt="icono dormitorio"
+                />
+                <p>4</p>
+              </li>
+            </ul>
+            <a class="boton-amarillo-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
+          </div>
+          <!--contenido-anuncio-->
+        </div>
+        <!--anuncio-->
+
+        <div class="anuncio">
+          <picture>
+            <source srcset="build/img/anuncio5.webp" type="image/webp" />
+            <source srcset="build/img/anuncio5.jpg" type="image/jpg" />
+            <img src="build/img/anuncio5.jpg" alt="anuncio" loading="lazy" />
+          </picture>
+          <div class="contenido-anuncio">
+            <h3>Casa terminados de lujo</h3>
+            <p>
+              Casa en el lago con excelente vista, acabados de lujo a un
+              excelente precio
+            </p>
+            <p class="precio">$3,0000,000</p>
+
+            <ul class="iconos-caracteristicas">
+              <li>
+                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_estacionamiento.svg"
+                  alt="icono estacionamiento"
+                />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_dormitorio.svg"
+                  alt="icono dormitorio"
+                />
+                <p>4</p>
+              </li>
+            </ul>
+            <a class="boton-amarillo-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
+          </div>
+          <!--contenido-anuncio-->
+        </div>
+
+        <!--anuncio-->
+        <div class="anuncio">
+          <picture>
+            <source srcset="build/img/anuncio6.webp" type="image/webp" />
+            <source srcset="build/img/anuncio6.jpg" type="image/jpg" />
+            <img src="build/img/anuncio6.jpg" alt="anuncio" loading="lazy" />
+          </picture>
+          <div class="contenido-anuncio">
+            <h3>Casa con alberca</h3>
+            <p>
+              Casa en el lago con excelente vista, acabados de lujo a un
+              excelente precio
+            </p>
+            <p class="precio">$3,0000,000</p>
+
+            <ul class="iconos-caracteristicas">
+              <li>
+                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_estacionamiento.svg"
+                  alt="icono estacionamiento"
+                />
+                <p>3</p>
+              </li>
+              <li>
+                <img
+                  src="build/img/icono_dormitorio.svg"
+                  alt="icono dormitorio"
+                />
+                <p>4</p>
+              </li>
+            </ul>
+            <a class="boton-amarillo-block" href="anuncio.html"
+              >Ver propiedad</a
+            >
+          </div>
+          <!--contenido-anuncio-->
+        </div>
+        <!--anuncio-->
+
     </main>
 
     <footer class="footer seccion">
-        <div class="contenedor contenido-footer">
-            <nav class="navegacion">
-                <a href="nosotros.html">Nosotros</a>
-                <a href="anuncios.html">Anuncios</a>
-                <a href="blog.html">Blog</a>
-                <a href="contacto.html">Contacto</a>
-              </nav>
-        </div>
-        <p class="copyright">Todos los derechos Reservados 2023 &COPY;</p>
+      <div class="contenedor contenido-footer">
+        <nav class="navegacion">
+          <a href="nosotros.html">Nosotros</a>
+          <a href="anuncios.html">Anuncios</a>
+          <a href="blog.html">Blog</a>
+          <a href="contacto.html">Contacto</a>
+        </nav>
+      </div>
+      <p class="copyright">Todos los derechos Reservados 2023 &COPY;</p>
     </footer>
     <script src="build/js/bundle.min.js"></script>
   </body>
