--- a/bienesraices_inicio/blog.html
+++ b/bienesraices_inicio/blog.html
@@ -12,7 +12,7 @@
       <div class="contenedor contenido-header">
         <div class="barra">
           <a href="/">
-            <img src="build/img/logo.svg" alt="logo">
+            <img src="build/img/logo.svg" alt="logo" />
           </a>
           <div class="derecha">
             <nav class="navegacion">
@@ -25,20 +25,117 @@
         </div>
       </div>
     </header>
-    <main class="contenedor seccion">
-        <h1>Blog</h1>
+    <main class="contenedor seccion contenido-centrado">
+      <h1>Nuestro Blog</h1>
+      <article class="entrada-blog">
+        <div class="imagen">
+          <picture>
+            <source srcset="build/img/blog1.webp" type="imagen/webp" />
+            <source srcset="build/img/blog1.jpg" type="imagen/jpg" />
+            <img
+              src="build/img/blog1.jpg"
+              alt="Texto Entrada Blog"
+              loading="lazy"
+            />
+          </picture>
+        </div>
+        <div class="texto-entrada">
+          <a href="entrada.html">
+            <h4>Terraza en el techo de tu casa</h4>
+            <p>Escrito el <span>20/10/2021</span> por: <span>Admin</span></p>
+
+            <p>
+              Consejos para construir una terraza en el techo de tu casa con los
+              mejores materiales y ahorrando dinero
+            </p>
+          </a>
+        </div>
+      </article>
+
+      <article class="entrada-blog">
+        <div class="imagen">
+          <picture>
+            <source srcset="build/img/blog2.webp" type="imagen/webp" />
+            <source srcset="build/img/blog2.jpg" type="imagen/jpg" />
+            <img
+              src="build/img/blog2.jpg"
+              alt="Texto Entrada Blog"
+              loading="lazy"
+            />
+          </picture>
+        </div>
+        <div class="texto-entrada">
+          <a href="entrada.html">
+            <h4>Guia para la decoracion de tu hogar</h4>
+            <p>Escrito el <span>20/10/2021</span> por: <span>Admin</span></p>
+            <p>
+              Maximiza el espacio en tu hogar con esta guia, aprende a combinar
+              muebles y colores para darle vida a tu espacio
+            </p>
+          </a>
+        </div>
+      </article>
+
+      <article class="entrada-blog">
+        <div class="imagen">
+          <picture>
+            <source srcset="build/img/blog3.webp" type="imagen/webp" />
+            <source srcset="build/img/blog3.jpg" type="imagen/jpg" />
+            <img
+              src="build/img/blog3.jpg"
+              alt="Texto Entrada Blog"
+              loading="lazy"
+            />
+          </picture>
+        </div>
+        <div class="texto-entrada">
+          <a href="entrada.html">
+            <h4>Terraza en el techo de tu casa</h4>
+            <p>Escrito el <span>20/10/2021</span> por: <span>Admin</span></p>
+
+            <p>
+              Consejos para construir una terraza en el techo de tu casa con los
+              mejores materiales y ahorrando dinero
+            </p>
+          </a>
+        </div>
+      </article>
+
+      <article class="entrada-blog">
+        <div class="imagen">
+          <picture>
+            <source srcset="build/img/blog4.webp" type="imagen/webp" />
+            <source srcset="build/img/blog4.jpg" type="imagen/jpg" />
+            <img
+              src="build/img/blog4.jpg"
+              alt="Texto Entrada Blog"
+              loading="lazy"
+            />
+          </picture>
+        </div>
+        <div class="texto-entrada">
+          <a href="entrada.html">
+            <h4>Guia para la decoracion de tu hogar</h4>
+            <p>Escrito el <span>20/10/2021</span> por: <span>Admin</span></p>
+            <p>
+              Maximiza el espacio en tu hogar con esta guia, aprende a combinar
+              muebles y colores para darle vida a tu espacio
+            </p>
+          </a>
+        </div>
+      </article>
     </main>
 
     <footer class="footer seccion">
-        <div class="contenedor contenido-footer">
-            <nav class="navegacion">
-                <a href="nosotros.html">Nosotros</a>
-                <a href="anuncios.html">Anuncios</a>
-                <a href="blog.html">Blog</a>
-                <a href="contacto.html">Contacto</a>
-              </nav>
-        </div>
-        <p class="copyright">Todos los derechos Reservados 2023 &COPY;</p>
+      <div class="contenedor contenido-footer">
+        <nav class="navegacion">
+          <a href="nosotros.html">Nosotros</a>
+          <a href="anuncios.html">Anuncios</a>
+          <a href="blog.html">Blog</a>
+          <a href="contacto.html">Contacto</a>
+        </nav>
+      </div>
+      <p class="copyright">Todos los derechos Reservados 2023 &COPY;</p>
     </footer>
     <script src="build/js/bundle.min.js"></script>
   </body>
