--- a/bienesraices_inicio/index.html
+++ b/bienesraices_inicio/index.html
@@ -228,7 +228,7 @@
           </div>
           <div class="texto-entrada">
             <h4>Terraza en el techo de tu casa</h4>
-            <p>Escrito el <span>20/10/2021</span> por: <span>Admin</span></p>
+            <p class="informacion-meta">Escrito el <span>20/10/2021</span> por: <span>Admin</span></p>
 
             <p>
               Consejos para construir una terraza en el techo de tu casa con los
@@ -251,7 +251,7 @@
           </div>
           <div class="texto-entrada">
             <h4>Guia para la decoracion de tu hogar</h4>
-            <p>Escrito el <span>20/10/2021</span> por: <span>Admin</span></p>
+            <p class="informacion-meta">Escrito el <span>20/10/2021</span> por: <span>Admin</span></p>
             <p>
               Maximiza el espacio en tu hogar con esta guia, aprende a combinar
               muebles y colores para darle vida a tu espacio
