Formulario, y animaciones JS
*Navegacion responsive
*Dark mode

--- a/bienesraices_inicio/index.html
+++ b/bienesraices_inicio/index.html
@@ -13,8 +13,13 @@
         <div class="barra">
           <a href="/">
             <img src="build/img/logo.svg" alt="logo" />
-          </a>
+          </a>  
+          <div class="mobile-menu">
+            <img src="build/img/barras.svg" alt="icono meno responsive">
+          </div>
+
           <div class="derecha">
+            <img src="build/img/dark-mode.svg" class="dark-mode-boton">
             <nav class="navegacion">
               <a href="nosotros.html">Nosotros</a>
               <a href="anuncios.html">Anuncios</a>
@@ -22,6 +27,7 @@
               <a href="contacto.html">Contacto</a>
             </nav>
           </div>
+          
         </div>
         <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
       </div>
@@ -86,18 +92,18 @@
 
             <ul class="iconos-caracteristicas">
               <li>
-                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono"
                   src="build/img/icono_estacionamiento.svg"
                   alt="icono estacionamiento"
                 />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono"
                   src="build/img/icono_dormitorio.svg"
                   alt="icono dormitorio"
                 />
@@ -128,18 +134,18 @@
 
             <ul class="iconos-caracteristicas">
               <li>
-                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono"
                   src="build/img/icono_estacionamiento.svg"
                   alt="icono estacionamiento"
                 />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono"
                   src="build/img/icono_dormitorio.svg"
                   alt="icono dormitorio"
                 />
@@ -170,18 +176,18 @@
 
             <ul class="iconos-caracteristicas">
               <li>
-                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono"
                   src="build/img/icono_estacionamiento.svg"
                   alt="icono estacionamiento"
                 />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono"
                   src="build/img/icono_dormitorio.svg"
                   alt="icono dormitorio"
                 />
