--- a/bienesraices_inicio/anuncio.html
+++ b/bienesraices_inicio/anuncio.html
@@ -14,7 +14,12 @@
           <a href="/">
             <img src="build/img/logo.svg" alt="logo" />
           </a>
+          <div class="mobile-menu">
+            <img src="build/img/barras.svg" alt="icono meno responsive">
+          </div>
+
           <div class="derecha">
+            <img src="build/img/dark-mode.svg" class="dark-mode-boton">
             <nav class="navegacion">
               <a href="nosotros.html">Nosotros</a>
               <a href="anuncios.html">Anuncios</a>
@@ -22,7 +27,6 @@
               <a href="contacto.html">Contacto</a>
             </nav>
           </div>
-        </div>
       </div>
     </header>
     <main class="contenedor seccion contenido-centrado">
@@ -36,18 +40,18 @@
         <p class="precio">$3,000,000</p>
         <ul class="iconos-caracteristicas">
           <li>
-            <img src="build/img/icono_wc.svg" alt="icono wc" />
+            <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" />
             <p>3</p>
           </li>
           <li>
-            <img
+            <img class="icono" 
               src="build/img/icono_estacionamiento.svg"
               alt="icono estacionamiento"
             />
             <p>3</p>
           </li>
           <li>
-            <img src="build/img/icono_dormitorio.svg" alt="icono dormitorio" />
+            <img  class="icono" src="build/img/icono_dormitorio.svg" alt="icono dormitorio" />
             <p>4</p>
           </li>
         </ul>
