--- a/bienesraices_inicio/anuncios.html
+++ b/bienesraices_inicio/anuncios.html
@@ -14,7 +14,12 @@
           <a href="/">
             <img src="build/img/logo.svg" alt="logo" />
           </a>
+          <div class="mobile-menu">
+            <img src="build/img/barras.svg" alt="icono meno responsive">
+          </div>
+
           <div class="derecha">
+            <img src="build/img/dark-mode.svg" class="dark-mode-boton">
             <nav class="navegacion">
               <a href="nosotros.html">Nosotros</a>
               <a href="anuncios.html">Anuncios</a>
@@ -44,18 +49,18 @@
 
             <ul class="iconos-caracteristicas">
               <li>
-                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <img class="icono" src="build/img/icono_wc.svg" alt="icono wc" />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_estacionamiento.svg"
                   alt="icono estacionamiento"
                 />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_dormitorio.svg"
                   alt="icono dormitorio"
                 />
@@ -86,18 +91,18 @@
 
             <ul class="iconos-caracteristicas">
               <li>
-                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <img class="icono"  src="build/img/icono_wc.svg" alt="icono wc" />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_estacionamiento.svg"
                   alt="icono estacionamiento"
                 />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_dormitorio.svg"
                   alt="icono dormitorio"
                 />
@@ -128,18 +133,18 @@
 
             <ul class="iconos-caracteristicas">
               <li>
-                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <img class="icono"  src="build/img/icono_wc.svg" alt="icono wc" />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_estacionamiento.svg"
                   alt="icono estacionamiento"
                 />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_dormitorio.svg"
                   alt="icono dormitorio"
                 />
@@ -169,18 +174,18 @@
 
             <ul class="iconos-caracteristicas">
               <li>
-                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <img  class="icono"  src="build/img/icono_wc.svg" alt="icono wc" />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_estacionamiento.svg"
                   alt="icono estacionamiento"
                 />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_dormitorio.svg"
                   alt="icono dormitorio"
                 />
@@ -211,18 +216,18 @@
 
             <ul class="iconos-caracteristicas">
               <li>
-                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <img class="icono"  src="build/img/icono_wc.svg" alt="icono wc" />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_estacionamiento.svg"
                   alt="icono estacionamiento"
                 />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_dormitorio.svg"
                   alt="icono dormitorio"
                 />
@@ -253,18 +258,18 @@
 
             <ul class="iconos-caracteristicas">
               <li>
-                <img src="build/img/icono_wc.svg" alt="icono wc" />
+                <img  class="icono"  src="build/img/icono_wc.svg" alt="icono wc" />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_estacionamiento.svg"
                   alt="icono estacionamiento"
                 />
                 <p>3</p>
               </li>
               <li>
-                <img
+                <img class="icono" 
                   src="build/img/icono_dormitorio.svg"
                   alt="icono dormitorio"
                 />
