--- a/bienesraices_inicio/entrada.html
+++ b/bienesraices_inicio/entrada.html
@@ -14,7 +14,12 @@
           <a href="/">
             <img src="build/img/logo.svg" alt="logo" />
           </a>
+          <div class="mobile-menu">
+            <img src="build/img/barras.svg" alt="icono meno responsive">
+          </div>
+
           <div class="derecha">
+            <img src="build/img/dark-mode.svg" class="dark-mode-boton">
             <nav class="navegacion">
               <a href="nosotros.html">Nosotros</a>
               <a href="anuncios.html">Anuncios</a>
